# evaluate-LLMs

./: .gitignore  README.md  ask_llms_examples.py  pyproject.toml  utils.py
eval_llm/: ask_llms_examples.py  check_by_themselves.py  queries.py
eval_llm/models/: __init__.py  models.py
eval_llm/type/: __init__.py  type.py
eval_llm/utils/: __init__.py  utils.py
examples/: example_call_llm.py
experiments/: README.md  experiment_dbpedia_14.py  experiment_qa.py  experiment_truthfulqa.py  plot_data.ipynb  plot_data_swapped_negatives.ipynb
experiments/dbpedia_14/: experiment_dbpedia_14.py
